more rules + storybook

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,30 @@
 {
-    "files.eol": "\n",
-    "css.validate": false,
-    "less.validate": false,
-    "scss.validate": false,
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "[javascript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    //   "editor.codeActionsOnSave": {
-    //     "source.fixAll.eslint": true
-    //   },
-    "eslint.validate": ["typescript", "typescriptreact"],
-    "files.watcherExclude": {
-        "**/target": true
-    },
-    "workbench.colorCustomizations": {
-        "titleBar.activeBackground": "#9b1924"
-    },
-    "typescript.tsdk": "./node_modules/typescript/lib",
-    "gitlens.advanced.blame.customArguments": [
-        "--ignore-revs-file",
-        ".git-blame-ignore-revs"
-    ],
-    "files.exclude": {
-        "**/.fttemplates": true
-    },
-    "svg.preview.background": "transparent"
+  "files.eol": "\n",
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  //   "editor.codeActionsOnSave": {
+  //     "source.fixAll.eslint": true
+  //   },
+  "eslint.validate": ["typescript", "typescriptreact"],
+  "files.watcherExclude": {
+    "**/target": true
+  },
+  "workbench.colorCustomizations": {
+    "titleBar.activeBackground": "#9b1924"
+  },
+  "typescript.tsdk": "./node_modules/typescript/lib",
+  "gitlens.advanced.blame.customArguments": [
+    "--ignore-revs-file",
+    ".git-blame-ignore-revs"
+  ],
+  "files.exclude": {
+    "**/.fttemplates": false
+  },
+  "svg.preview.background": "transparent"
 }
