storybook tailwindcss config + correct no-restirect-imports pattern

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,7 @@
     ".git-blame-ignore-revs"
   ],
   "files.exclude": {
-    "**/.fttemplates": false
+    "**/.fttemplates": true
   },
   "svg.preview.background": "transparent"
 }
