--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^7",
     "prettier": "^2.3.2",
+    "storybook-dark-mode": "^1.0.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
