--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  // "javascript.preferences.importModuleSpecifier": "non-relative",
   "files.eol": "\n",
   "css.validate": false,
   "less.validate": false,
