import rule pattern "@features" blocked

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,9 +2,11 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
+      "@components/*": ["components/*"],
       "@typing/*": ["typing/*"],
-      "@components/*": ["components/*"]
+      "@config/*": ["config/*"],
+      "@features/*": ["features/*"]
     }
-  },
-  "include": ["./**/*.ts", "./**/*.tsx"]
+  }
+  // "include": ["./**/*.ts", "./**/*.tsx"]
 }
