--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,9 @@
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  //   "editor.codeActionsOnSave": {
-  //     "source.fixAll.eslint": true
-  //   },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "eslint.validate": ["typescript", "typescriptreact"],
   "files.watcherExclude": {
     "**/target": true
