--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "component-collection",
+  "name": "@fmteixeira/react-stack",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.11.4",
