--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
   "files.exclude": {
     "**/.fttemplates": true
   },
-  "svg.preview.background": "transparent"
+  "svg.preview.background": "transparent",
+  "compile-hero.disable-compile-files-on-did-save-code": true
 }
