FIX: storybook webpack not using tsconfig absolutes

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,6 +7,6 @@
       "@/config/*": ["config/*"],
       "@/features/*": ["features/*"]
     }
-  }
-  // "include": ["./**/*.ts", "./**/*.tsx"]
+  },
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
