--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -63,6 +65,7 @@
     "@storybook/node-logger": "^6.3.6",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.6",
+    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "autoprefixer": "^9",
@@ -80,5 +83,8 @@
     "prettier": "^2.3.2",
     "storybook-dark-mode": "^1.0.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
