dynamic routing from json files

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,8 +4,10 @@
     "paths": {
       "@/components/*": ["components/*"],
       "@/types/*": ["types/*"],
+      "@/content/*": ["content/*"],
       "@/config/*": ["config/*"],
-      "@/features/*": ["features/*"]
+      "@/features/*": ["features/*"],
+      "@/routes": ["routes"]
     }
   },
   "include": ["./**/*.ts", "./**/*.tsx"]
