forced barrel import

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,6 +7,7 @@
       "@/content/*": ["content/*"],
       "@/config/*": ["config/*"],
       "@/features/*": ["features/*"],
+      "@/hooks": ["hooks"],
       "@/routes": ["routes"]
     }
   },
